# Hectron_Genesis

./: CERTIFICADO_CONSAGRACION.md  GOVERNANCE.md  LICENSE  LICENSE.md  LICENSE_LLAMA.md  README.md  TODO.md  app.py  deploy_app.sh  docker-compose.yml  file  genesis_total.sh  hectron.sh  m  main.py  main.yaml  materialize_ip.sh  omega_update.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: Hectron  main.yml  orbital-sync.yml  python-app.yml  requirements.txt  summary.yml
agents/: registry.json
ai/: cognitive.py  defensive_wrapper.py  federated_learning.py
apps/desktop-command/: main.py
backend/: main.py
client/: NeuralLexicon.tsx  compute_worker.js  orbital_terminal.jsx
content/12_Legal/: CERTIFICADO_CONSAGRACION.md  PRIOR_ART_CLAIM.md
core/: agents_registry.json  equations.py  ontological_engine.py  psyche.py  system.py
core/cognitive/: HectronNexus.py
core/drivers/: pal_baphomet_v2.json
data/: immutable_ledger.jsonl
docs/: GENESIS_LOG.md  MANIFESTO.md  SPRINT5_REFLEXION.md
legal_shield/: defense_protocol.py
